[gd_scene load_steps=27 format=3 uid="uid://d2vaf2s7fg3u1"]

[ext_resource type="Script" path="res://Util/Managers/TeamManager.gd" id="1_kfjuw"]
[ext_resource type="Texture2D" uid="uid://ds805iltnvi5k" path="res://Engines/LaneWar/Assets/KenneyScribblePlatformer/Default/character_roundRed.png" id="1_lk1by"]
[ext_resource type="Script" path="res://Misc/ActionManager.gd" id="1_wy085"]
[ext_resource type="Texture2D" uid="uid://dv5wju4rg4ni1" path="res://Engines/LaneWar/Assets/KenneyScribblePlatformer/Default/character_roundYellow.png" id="2_b7e2c"]
[ext_resource type="Script" path="res://Util/CommandsUI.gd" id="3_0wwxe"]
[ext_resource type="Script" path="res://Util/ProjectileCommand2D.gd" id="4_gl43m"]
[ext_resource type="Script" path="res://Misc/Beam.gd" id="5_0elrb"]
[ext_resource type="Script" path="res://Misc/ProjectileBall.tres.gd" id="6_q6g3u"]
[ext_resource type="Script" path="res://Misc/Arrow.gd" id="7_5jr0h"]
[ext_resource type="Script" path="res://Misc/ProjectileBeam.tres.gd" id="7_sr7a3"]
[ext_resource type="Script" path="res://Misc/ProjectileArrrow.tres.gd" id="9_sxn5t"]
[ext_resource type="Script" path="res://Util/Sequence.gd" id="10_ylugb"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_bouuv"]
width = 100
height = 20

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5208o"]
size = Vector2(100, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_qaeqd"]
radius = 25.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ijq5"]
size = Vector2(100, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_6flcf"]
radius = 25.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rwfrv"]

[sub_resource type="Gradient" id="Gradient_q1t04"]
interpolation_mode = 1
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vjx8b"]
gradient = SubResource("Gradient_q1t04")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.8, 0.4)
metadata/_snap_enabled = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p07o5"]

[sub_resource type="GDScript" id="GDScript_n8yir"]
script/source = "extends Node2D

var origin = null : get = get_origin
var target = null : get = get_target
var start_pos
var end_pos 
var drawing_enabled : = false
var draw_resolution : = 10

signal aiming_finished


func _process(delta):
	if drawing_enabled:
		queue_redraw()

func _input(event):
	if drawing_enabled:
		if Input.is_action_just_pressed(\"left_click\"):
			start_pos = origin
			end_pos = target
			emit_signal(\"aiming_finished\")

func _draw():
	if drawing_enabled:
		if origin != null and target != null:
			var current_pos : Vector2 = origin
			var target_pos : Vector2 = target
			
			var total_dist : float = current_pos.distance_to(target_pos)
			var direction : Vector2 = current_pos.direction_to(target_pos)
			for i in range(draw_resolution):
				var incremental_dist : = (total_dist / draw_resolution)
				draw_line(
					current_pos, 
					current_pos + (direction * incremental_dist), 
					Color.MEDIUM_VIOLET_RED, 
					2.0
				)
				current_pos += direction * incremental_dist

func reset():
	start_pos = null
	end_pos = null
	drawing_enabled = false
	
func get_origin():
	if origin is Callable:
		return origin.call()
	else:
		return origin
		
func get_target():
	if target is Callable:
		return target.call()
	else:
		return target
		
"

[sub_resource type="GDScript" id="GDScript_x4o2s"]
script/source = "extends Node2D

var radius = null : get = get_radius
var target = null : get = get_target
var target_pos  
var drawing_enabled : = false
var draw_resolution : = 10

signal aiming_finished

func _process(delta):
	if drawing_enabled:
		queue_redraw()

func _input(event):
	if drawing_enabled:
		if Input.is_action_just_pressed(\"left_click\"):
			target_pos = target
			emit_signal(\"aiming_finished\")

func _draw():
	if drawing_enabled:
		draw_circle(target, radius, Color(Color.RED, 0.5))
		
func reset():
	radius = null
	target_pos = null
	drawing_enabled = false
	
func get_radius():
	if radius is Callable:
		return radius.call()
	else:
		return radius
		
func get_target():
	if target is Callable:
		return target.call()
	else:
		return target
		
"

[sub_resource type="Gradient" id="Gradient_1equo"]
interpolation_mode = 1
colors = PackedColorArray(0.619608, 0, 0.607843, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1yarx"]
gradient = SubResource("Gradient_1equo")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.8, 0.4)
metadata/_snap_enabled = true

[sub_resource type="CircleShape2D" id="CircleShape2D_r362s"]

[node name="ProjectileTest" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(603, 358)
zoom = Vector2(0.5, 0.5)

[node name="ActionManager" type="Node2D" parent="."]
script = ExtResource("1_wy085")
team_manager_path = NodePath("../TeamManager")
actions_list_path = NodePath("../Projectiles")
timer_ui_path = NodePath("../UI/VBoxContainer/CenterContainer/ProgressBar")

[node name="TeamManager" type="Node2D" parent="."]
script = ExtResource("1_kfjuw")
teams_array = Array[NodePath]([NodePath("../LeftSide/LeftTeam"), NodePath("../RightSide/RightTeam")])

[node name="LeftSide" type="Node2D" parent="."]
position = Vector2(300, 650)

[node name="Raft" type="Node2D" parent="LeftSide"]

[node name="Base" type="StaticBody2D" parent="LeftSide/Raft"]

[node name="Sprite2D" type="Sprite2D" parent="LeftSide/Raft/Base"]
texture = SubResource("NoiseTexture2D_bouuv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftSide/Raft/Base"]
shape = SubResource("RectangleShape2D_5208o")

[node name="LeftTeam" type="Node2D" parent="LeftSide"]

[node name="TestBody" type="RigidBody2D" parent="LeftSide/LeftTeam"]
position = Vector2(0, -44)
mass = 100.0
linear_damp = 3.0

[node name="Sprite2D" type="Sprite2D" parent="LeftSide/LeftTeam/TestBody"]
texture = ExtResource("1_lk1by")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftSide/LeftTeam/TestBody"]
shape = SubResource("CircleShape2D_qaeqd")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="RightSide" type="Node2D" parent="."]
position = Vector2(900, 650)

[node name="Raft" type="Node2D" parent="RightSide"]

[node name="Base" type="StaticBody2D" parent="RightSide/Raft"]

[node name="Sprite2D" type="Sprite2D" parent="RightSide/Raft/Base"]
texture = SubResource("NoiseTexture2D_bouuv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightSide/Raft/Base"]
shape = SubResource("RectangleShape2D_4ijq5")

[node name="Base2" type="StaticBody2D" parent="RightSide/Raft"]
position = Vector2(63, -53)
rotation = -1.21649

[node name="Sprite2D" type="Sprite2D" parent="RightSide/Raft/Base2"]
texture = SubResource("NoiseTexture2D_bouuv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightSide/Raft/Base2"]
shape = SubResource("RectangleShape2D_4ijq5")

[node name="RightTeam" type="Node2D" parent="RightSide"]

[node name="TestBody" type="RigidBody2D" parent="RightSide/RightTeam"]
position = Vector2(-1, -43)
mass = 100.0
linear_damp = 3.0

[node name="Sprite2D" type="Sprite2D" parent="RightSide/RightTeam/TestBody"]
scale = Vector2(-1, 1)
texture = ExtResource("2_b7e2c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightSide/RightTeam/TestBody"]
shape = SubResource("CircleShape2D_6flcf")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Projectiles" type="Node2D" parent="."]

[node name="Ball" type="Node2D" parent="Projectiles"]
script = ExtResource("4_gl43m")
projectile_path = NodePath("Ball")

[node name="Ball" type="RigidBody2D" parent="Projectiles/Ball"]
process_mode = 4
position = Vector2(310, 342)
mass = 10.0
sleeping = true
freeze_mode = 1
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("6_q6g3u")
decay_rate = 1.5

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="Projectiles/Ball/Ball"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Projectiles/Ball/Ball"]
shape = SubResource("CircleShape2D_rwfrv")

[node name="Sprite2D" type="Sprite2D" parent="Projectiles/Ball/Ball"]
texture_filter = 1
texture = SubResource("GradientTexture2D_vjx8b")

[node name="Beam" type="Node2D" parent="Projectiles"]
script = ExtResource("5_0elrb")
projectile_path = NodePath("Beam")

[node name="Beam" type="Node2D" parent="Projectiles/Beam"]
process_mode = 4
position = Vector2(495, 297)
script = ExtResource("7_sr7a3")
duration = 0.5

[node name="Line2D" type="Line2D" parent="Projectiles/Beam/Beam"]

[node name="Timer" type="Timer" parent="Projectiles/Beam/Beam"]
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="Projectiles/Beam/Beam"]

[node name="Area2D" type="Area2D" parent="Projectiles/Beam/Beam"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Projectiles/Beam/Beam/Area2D"]
shape = SubResource("RectangleShape2D_p07o5")

[node name="Arrow" type="Node2D" parent="Projectiles"]
script = ExtResource("7_5jr0h")

[node name="Conditions" type="Node2D" parent="Projectiles/Arrow"]

[node name="HasEnoughStamina" type="Node2D" parent="Projectiles/Arrow/Conditions"]

[node name="AimingSequence" type="Node2D" parent="Projectiles/Arrow"]
script = ExtResource("10_ylugb")
resolution = 3

[node name="AimLine" type="Node2D" parent="Projectiles/Arrow/AimingSequence"]
script = SubResource("GDScript_n8yir")

[node name="AimTarget" type="Node2D" parent="Projectiles/Arrow/AimingSequence"]
script = SubResource("GDScript_x4o2s")

[node name="Projectile" type="RigidBody2D" parent="Projectiles/Arrow"]
process_mode = 4
position = Vector2(656, 249)
mass = 10.0
gravity_scale = 0.0
sleeping = true
lock_rotation = true
linear_damp = 3.0
script = ExtResource("9_sxn5t")
turning_radius = 1.571
speed = 200.0

[node name="Sprite2D" type="Sprite2D" parent="Projectiles/Arrow/Projectile"]
texture_filter = 1
texture = SubResource("GradientTexture2D_1yarx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Projectiles/Arrow/Projectile"]
shape = SubResource("CircleShape2D_r362s")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Projectiles/Arrow/Projectile"]

[node name="RayCast2D" type="RayCast2D" parent="Projectiles/Arrow/Projectile"]
target_position = Vector2(0, -25)

[node name="Terrain" type="Node2D" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 81.0

[node name="CenterContainer" type="CenterContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="UI/VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
max_value = 1.0
step = 0.0

[node name="ActionBar" type="HFlowContainer" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
alignment = 1
script = ExtResource("3_0wwxe")
commands_nodepath = NodePath("../../../Projectiles")
action_manager_nodepath = NodePath("../../../ActionManager")

[node name="Button" type="Button" parent="UI/VBoxContainer/ActionBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Ball Base"

[node name="Button2" type="Button" parent="UI/VBoxContainer/ActionBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Ball Base"

[node name="Button3" type="Button" parent="UI/VBoxContainer/ActionBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Ball Base"

[node name="Button4" type="Button" parent="UI/VBoxContainer/ActionBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Ball Base"

[node name="Button5" type="Button" parent="UI/VBoxContainer/ActionBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Ball Base"

[node name="Button6" type="Button" parent="UI/VBoxContainer/ActionBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Ball Base"
